<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LockScreenActivity">

    <!-- android:background="@drawable/transparent" -->
    <!--<com.john.waveview.WaveView-->
        <!--xmlns:wave="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/waveView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@drawable/bg_percent"-->
        <!--wave:above_wave_color="@color/waveMainColor"-->
        <!--wave:blow_wave_color="@color/wavesubColor"-->
        <!--wave:wave_height="little"-->
        <!--wave:wave_hz="normal"-->
        <!--wave:wave_length="middle" />-->

    <!-- android:background="@drawable/image15" -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/lockScreenView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/timeGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/timeGuideline" >

            <TextView
                android:id="@+id/lockScreenTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteColor"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/lockScreenDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/lockScreenAddWaterEffectFrame"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="@id/lockScreenWaterProgressbarFrame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:id="@+id/lockScreenWaterProgressbarFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!-- android:src="@drawable/water_type_01" -->
                    <ImageView
                        android:id="@+id/lockScreenWaterTypeImage"
                        android:src="@drawable/click_water_alarm"
                        android:scaleType="centerCrop"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="waterType" />

                    <TextView
                        android:id="@+id/lockScreenWaterPercent"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textColor="@color/whiteColor"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/lockScreenGoalWater"
                            android:text="0ml"
                            android:textSize="15sp"
                            android:textColor="@color/whiteColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="0.8dp"
                            android:background="@color/whiteColor"/>

                        <TextView
                            android:text="@string/todayGoal"
                            android:textSize="12sp"
                            android:textColor="@color/whiteColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/lockScreenTodayWater"
                            android:text="0ml"
                            android:textSize="15sp"
                            android:textColor="@color/whiteColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="0.8dp"
                            android:background="@color/whiteColor"/>

                        <TextView
                            android:text="@string/todayWaterText"
                            android:textSize="12sp"
                            android:textColor="@color/whiteColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/lockScreenRemainWater"
                            android:text="0ml"
                            android:textSize="15sp"
                            android:textColor="@color/whiteColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="0.8dp"
                            android:background="@color/whiteColor"/>

                        <TextView
                            android:text="@string/leftWater"
                            android:textSize="12sp"
                            android:textColor="@color/whiteColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/lockScreenWaterProgressbar"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layoutDirection="rtl"
                android:progress="40"
                android:indeterminate="false"
                android:indeterminateDrawable="@drawable/water_progressbar"
                android:progressDrawable="@drawable/custom_progress_primary"
                android:background="@drawable/bg_percent"
                style="?android:attr/progressBarStyleHorizontal" />

            <!-- add_water -->
            <ImageView
                android:id="@+id/lockScreenAddWaterButton"
                android:layout_gravity="bottom|center_horizontal"
                android:src="@drawable/click_water_alarm"
                android:background="@drawable/bg_percent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/addWaterButton" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/lockScreenSwipeUnLockFrame"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_lockscreen_swipe"
            app:layout_constraintBottom_toTopOf="@+id/lockScreenAdView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:text="@string/unlock"
                android:textSize="18sp"
                android:textColor="@color/whiteColor"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--<hanmo.com.drinkingwaterassistant.lockscreen.util.UnLockSwipe-->
                <!--android:id="@+id/swipeUnLockButton"-->
                <!--android:padding="1dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"/>-->

            <com.ceedlive.androidlockscreen.CustomViewUnLockSwipe
                android:id="@+id/lockScreenSwipeUnLockButton"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </FrameLayout>

        <!-- Lottie -->
        <View
            android:id="@+id/menuButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="10dp" />


        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/lcMenuList"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:visibility="gone"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/menuButton"-->
            <!--android:layout_marginEnd="10dp"-->
            <!--android:layout_marginRight="10dp" />-->

        <!-- android:background="@drawable/transparent" -->
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lockScreenAdView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_percent"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_id_test1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>